--- a/results/report.html
+++ b/results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,8945],[[4,5,6,0,[],[1,12,8932],[[7,8,9,10,[],[1,14,8929],[],[[11,0,0,[],[1,123,8819],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,12362],[[4,5,6,0,[],[1,14,12347],[[7,8,9,10,[],[1,15,12345],[],[[11,0,0,[],[1,165,12195],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Markx-Robot","*C:\\Development\\Study\\papito\\Qax\\projects\\markx-robot","*..","*Tests","*C:\\Development\\Study\\papito\\Qax\\projects\\markx-robot\\tests","*../tests","*Login","*C:\\Development\\Study\\papito\\Qax\\projects\\markx-robot\\tests\\login.robot","*../tests/login.robot","*<p>Testes de login\x3c/p>","*Deve Logar com sucesso"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Markx-Robot","*C:\\Development\\Study\\papito\\Qax\\projects\\markx-robot","*..","*Tests","*C:\\Development\\Study\\papito\\Qax\\projects\\markx-robot\\tests","*../tests","*Task","*C:\\Development\\Study\\papito\\Qax\\projects\\markx-robot\\tests\\task.robot","*../tests/task.robot","*<p>Suite de testes do cadastro de tarefas\x3c/p>","*Deve poder cadastrar uma nova tarefa"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"Markx-Robot","name":"Markx-Robot","pass":1,"skip":0},{"elapsed":"00:00:09","fail":0,"id":"s1-s1","label":"Markx-Robot.Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:09","fail":0,"id":"s1-s1-s1","label":"Markx-Robot.Tests.Login","name":"Login","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:12","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:12","fail":0,"id":"s1","label":"Markx-Robot","name":"Markx-Robot","pass":1,"skip":0},{"elapsed":"00:00:12","fail":0,"id":"s1-s1","label":"Markx-Robot.Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:12","fail":0,"id":"s1-s1-s1","label":"Markx-Robot.Tests.Task","name":"Task","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1740352394053;
+window.output["baseMillis"] = 1740356012089;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 8962;
+window.output["generated"] = 12386;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
