--- a/results/report.html
+++ b/results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,12362],[[4,5,6,0,[],[1,14,12347],[[7,8,9,10,[],[1,15,12345],[],[[11,0,0,[],[1,165,12195],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,23420],[[4,5,6,0,[],[1,14,23405],[[7,8,9,10,[],[1,15,23402],[],[[11,0,0,[],[1,782,10776],[]],[12,0,0,[13],[1,11559,11858],[]]],[],[2,2,0,0]]],[],[],[2,2,0,0]]],[],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Markx-Robot","*C:\\Development\\Study\\papito\\Qax\\projects\\markx-robot","*..","*Tests","*C:\\Development\\Study\\papito\\Qax\\projects\\markx-robot\\tests","*../tests","*Task","*C:\\Development\\Study\\papito\\Qax\\projects\\markx-robot\\tests\\task.robot","*../tests/task.robot","*<p>Suite de testes do cadastro de tarefas\x3c/p>","*Deve poder cadastrar uma nova tarefa"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Markx-Robot","*C:\\Development\\Study\\papito\\Qax\\projects\\markx-robot","*..","*Tests","*C:\\Development\\Study\\papito\\Qax\\projects\\markx-robot\\tests","*../tests","*Task","*C:\\Development\\Study\\papito\\Qax\\projects\\markx-robot\\tests\\task.robot","*../tests/task.robot","*<p>Suite de testes do cadastro de tarefas\x3c/p>","*Deve poder cadastrar uma nova tarefa","*Deve poder remover uma tarefa indesejada","*remove"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:12","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:12","fail":0,"id":"s1","label":"Markx-Robot","name":"Markx-Robot","pass":1,"skip":0},{"elapsed":"00:00:12","fail":0,"id":"s1-s1","label":"Markx-Robot.Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:12","fail":0,"id":"s1-s1-s1","label":"Markx-Robot.Tests.Task","name":"Task","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:23","fail":0,"label":"All Tests","pass":2,"skip":0}],[{"elapsed":"00:00:12","fail":0,"label":"remove","pass":1,"skip":0}],[{"elapsed":"00:00:23","fail":0,"id":"s1","label":"Markx-Robot","name":"Markx-Robot","pass":2,"skip":0},{"elapsed":"00:00:23","fail":0,"id":"s1-s1","label":"Markx-Robot.Tests","name":"Tests","pass":2,"skip":0},{"elapsed":"00:00:23","fail":0,"id":"s1-s1-s1","label":"Markx-Robot.Tests.Task","name":"Task","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1740356012089;
+window.output["baseMillis"] = 1740430449162;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 12386;
+window.output["generated"] = 23458;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
