App Mark X is done

--- a/results/report.html
+++ b/results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,23420],[[4,5,6,0,[],[1,14,23405],[[7,8,9,10,[],[1,15,23402],[],[[11,0,0,[],[1,782,10776],[]],[12,0,0,[13],[1,11559,11858],[]]],[],[2,2,0,0]]],[],[],[2,2,0,0]]],[],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,37863],[[4,5,6,0,[],[1,16,37846],[[7,8,9,10,[],[1,17,37843],[],[[11,0,0,[],[1,632,11422],[]],[12,0,0,[13],[1,12054,12454],[]],[14,0,0,[15],[1,24510,13350],[]]],[],[3,3,0,0]]],[],[],[3,3,0,0]]],[],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Markx-Robot","*C:\\Development\\Study\\papito\\Qax\\projects\\markx-robot","*..","*Tests","*C:\\Development\\Study\\papito\\Qax\\projects\\markx-robot\\tests","*../tests","*Task","*C:\\Development\\Study\\papito\\Qax\\projects\\markx-robot\\tests\\task.robot","*../tests/task.robot","*<p>Suite de testes do cadastro de tarefas\x3c/p>","*Deve poder cadastrar uma nova tarefa","*Deve poder remover uma tarefa indesejada","*remove"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Markx-Robot","*C:\\Development\\Study\\papito\\Qax\\projects\\markx-robot","*..","*Tests","*C:\\Development\\Study\\papito\\Qax\\projects\\markx-robot\\tests","*../tests","*Task","*C:\\Development\\Study\\papito\\Qax\\projects\\markx-robot\\tests\\task.robot","*../tests/task.robot","*<p>Suite de testes do cadastro de tarefas\x3c/p>","*Deve poder cadastrar uma nova tarefa","*Deve poder remover uma tarefa indesejada","*remove","*Deve poder concluir uma tarefa","*done"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:23","fail":0,"label":"All Tests","pass":2,"skip":0}],[{"elapsed":"00:00:12","fail":0,"label":"remove","pass":1,"skip":0}],[{"elapsed":"00:00:23","fail":0,"id":"s1","label":"Markx-Robot","name":"Markx-Robot","pass":2,"skip":0},{"elapsed":"00:00:23","fail":0,"id":"s1-s1","label":"Markx-Robot.Tests","name":"Tests","pass":2,"skip":0},{"elapsed":"00:00:23","fail":0,"id":"s1-s1-s1","label":"Markx-Robot.Tests.Task","name":"Task","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:37","fail":0,"label":"All Tests","pass":3,"skip":0}],[{"elapsed":"00:00:13","fail":0,"label":"done","pass":1,"skip":0},{"elapsed":"00:00:12","fail":0,"label":"remove","pass":1,"skip":0}],[{"elapsed":"00:00:38","fail":0,"id":"s1","label":"Markx-Robot","name":"Markx-Robot","pass":3,"skip":0},{"elapsed":"00:00:38","fail":0,"id":"s1-s1","label":"Markx-Robot.Tests","name":"Tests","pass":3,"skip":0},{"elapsed":"00:00:38","fail":0,"id":"s1-s1-s1","label":"Markx-Robot.Tests.Task","name":"Task","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1740430449162;
+window.output["baseMillis"] = 1740450298101;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 23458;
+window.output["generated"] = 37911;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
